<?xml version="1.0"?>
<package format="2">
  <name>handsfree_teleop</name>
  <version>0.0.2</version>
  <description>
    a
  </description>
  <maintainer email="jasongedev@gmail.com">Jason Ge</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>teleop_launch</exec_depend>
  <exec_depend>joint_mover</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
