<?xml version="1.0"?>
<package format="2">
  <name>joint_mover</name>
  <version>0.0.1</version>
  <description>
    Hands-free Teleoperation of a Dual Arm Robot via Real-time 3D Pose Estimation
  </description>
  <maintainer email="jasongedev@gmail.com">Jason Ge</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
</package>
