<?xml version="1.0"?>
<package format="2">
  <name>teleop_launch</name>
  <version>0.0.1</version>
  <description>Launch package</description>
  <maintainer email="jasongedev@gmail.com">Jason Ge</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>rostest</depend>
</package>
